# todoas

./: .gitmodules  CMakeLists.txt
include/: cmdio.h  todoas.h
src/: a.out  list.c  main.c
